Moving away from deprecated methods in jline and the jdk.